--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-reveal": "^1.2.2",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
